@@ -46,7 +46,7 @@
 #  define MUNGE_CIPHER_AES128_FLAG      0
 #endif
 
-#if HAVE_LIBGCRYPT || HAVE_EVP_AES_256_CBC
+#if HAVE_LIBGCRYPT || (HAVE_EVP_AES_256_CBC && HAVE_EVP_SHA256)
 #  define MUNGE_CIPHER_AES256_FLAG      1
 #else
 #  define MUNGE_CIPHER_AES256_FLAG      0
